--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,25 +1,30 @@
 .footer-container {
-    border-top: 1px solid rgba(128, 128, 128, 0.63);
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    padding: 25px 25%;
-    margin: 10px 0 0 0;
-    gap: 15px;
+  border-top: 1px solid rgba(128, 128, 128, 0.63);
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  padding: 25px 25%;
+  margin: 91px 0 0 0;
+  gap: 15px;
 }
-.disclaimer, .copyright {
-    text-align: center;
+.disclaimer,
+.copyright {
+  text-align: center;
+  font-size: 13px;
 }
-.disclaimer p, .copyright p{
-    margin: 0;
+.disclaimer p,
+.copyright p {
+  margin: 0;
 }
 
 .disclaimer {
-    color: #9b9a9a;
+  color: #9b9a9a;
+  font-size: 13px;
+  line-height: 20px;
 }
 
 @media (max-width: 748px) {
-    .footer-container {
-        padding: 25px 10%;
-    }
+  .footer-container {
+    padding: 25px 10%;
+  }
 }
