--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,33 +1,39 @@
 .header-container {
-    display: flex;
-    justify-content: space-around;
-    padding: 10px 0;
-    box-shadow: 0 -6px 10px 5px rgba(0,0,0,0.5);
-    position: sticky;
-    z-index: 999;
+  display: flex;
+  justify-content: space-around;
+  padding: 10px 0;
+  box-shadow: 0 -6px 10px 5px rgba(0, 0, 0, 0.5);
+  position: sticky;
+  z-index: 999;
 }
 
-.logo-container img, .user-info-container .avatar img {
-    max-height: 50px;
+.logo-container img,
+.user-info-container .avatar img {
+  max-height: 65px;
 }
 
 .user-info-container {
-    display: flex;
-    flex: 0 0 auto;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-items: center;
-    gap: 10px;
+  display: flex;
+  flex: 0 0 auto;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  gap: 10px;
 }
 
-.user-info-container .intro{
-    display: flex;
-    flex-direction: column;
-    flex: 0 0 auto;
-    flex-wrap: nowrap;
-    text-align: right;
+.user-info-container .intro {
+  display: flex;
+  flex-direction: column;
+  flex: 0 0 auto;
+  flex-wrap: nowrap;
+  text-align: right;
 }
-.user-info-container .intro .intro-text{
-    font-style: italic;
-    color: gray;
+.user-info-container .intro .intro-text {
+  font-style: italic;
+  color: gray;
+  font-size: 15px;
+}
+
+.user-info-container .intro .name {
+  font-size: 13px;
 }
